src/main/java/com/example/demo/errors/ErrorResponse.java
package com.example.demo.errors;

import lombok.Data;
import org.springframework.http.HttpStatus;

@Data
public class ErrorResponse {
    private HttpStatus status;
    private String errorMessage;

    public ErrorResponse() {
    }

    public ErrorResponse(HttpStatus status, String errorMessage) {
        this.status = status;
        this.errorMessage = errorMessage;
    }
}
